--- a/style.css
+++ b/style.css
@@ -42,3 +42,19 @@ body{
     font-weight: bolder; 
    
 }
+.image{
+
+
+    height: 50%;
+    margin-top: 20px;
+    margin-left: 35px;
+    border-radius: 15px;
+   
+}
+
+.image:hover{
+    cursor: pointer;
+    box-shadow:2px 2px 13px 3px gray;
+   transition: 0.4s;
+}
+
