--- a/style.css
+++ b/style.css
@@ -58,3 +58,12 @@ body{
    transition: 0.4s;
 }
 
+.songname{
+
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align:center;
+    color: rgb(255, 255, 255);
+    text-shadow: 4px 4px 4px gray;
+    margin-top: 5%;
+    font-weight: bolder;  
+}
