--- a/style.css
+++ b/style.css
@@ -67,3 +67,22 @@ body{
     margin-top: 5%;
     font-weight: bolder;  
 }
+.songwriter{
+
+
+    color: #666666;
+    font-size: smaller;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: center;
+    text-shadow: 3px 3px 3px gray;
+    font-weight: bolder;
+   
+}
+
+.songwriter:hover{
+
+    cursor: pointer;
+    transition: 0.5s;
+    color: #2e2e2e;
+
+}
