--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ body{
     width: 45px;
     height: 45px;
     border-radius: 50%;
-    margin-right: 30px;
+    margin-right: 32px;
    
   
 }
@@ -124,8 +124,9 @@ body{
 }
 ul{
    
-    padding-left: 12.5%;
+    padding-left: 12%;
     margin-top: 3%;
+    padding-right: 12%;
 
 }
 
