--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body{
     width: 45px;
     height: 45px;
     border-radius: 50%;
-    margin-right: 30px;
+    margin-right: 32px;
    
   
 }
@@ -126,8 +126,9 @@ body{
 }
 ul{
    
-    padding-left: 12.5%;
-    margin-top: 3%;
+   padding-left: 12%;
+   margin-top: 3%;
+   padding-right: 12%;
 
 }
 
